1. Метод .of [#70623 #355858]